src/objects/GLBL_Form_Execution_Question_Answer__c.object
<CustomObject>
    <description>Stores the snapshot of answers chosen by the front end user for the question in the form</description>
    <fields>
        <fullName>Form_Execution__c</fullName>
        <description>Stores reference to Form Execution Object</description>
        <label>Form Execution</label>
        <referenceTo>GLBL_Form_Execution__c</referenceTo>
        <relationshipLabel>Form Execution Question &amp; Answers</relationshipLabel>
        <relationshipName>Form_Execution_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Helptext__c</fullName>
        <description>Stores information to guide the front end user</description>
        <label>Helptext</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>Stores Text of a question to be displayed to the front end user for each form context</description>
        <label>Question Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Number__c</fullName>
        <label>Response Number</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Text__c</fullName>
        <label>Response Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Stores the order in which each snapshot is placed</description>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference id of the question related</description>
        <label>Source Question</label>
        <referenceTo>GLBL_Form_Template_Question__c</referenceTo>
        <relationshipLabel>Form Execution Question &amp; Answers</relationshipLabel>
        <relationshipName>Form_Execution_Question_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Score_A__c</fullName>
        <description>The Force.com score for the completed question &amp; answer: Created by J Mohanan Pillai</description>
        <inlineHelpText>The Force.com score for the completed question &amp; answer</inlineHelpText>
        <label>Force.com score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_B__c</fullName>
        <description>The SharePoint score for the completed question &amp; answer: Created by J Mohanan Pillai</description>
        <inlineHelpText>The SharePoint score for the completed question &amp; answer</inlineHelpText>
        <label>SharePoint score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_C__c</fullName>
        <description>The LillyCloud score for the completed question &amp; answer: Created by J Mohanan Pillai</description>
        <inlineHelpText>The LillyCloud score for the completed question &amp; answer</inlineHelpText>
        <label>LillyCloud score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_D__c</fullName>
        <description>The Web Hosting score for the completed question &amp; answer: Created by J Mohanan Pillai</description>
        <inlineHelpText>The Web Hosting score for the completed question &amp; answer</inlineHelpText>
        <label>Web Hosting score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_E__c</fullName>
        <description>The Business Strategic / Custom score for the completed question &amp; answer: Created by J Mohanan Pillai</description>
        <inlineHelpText>The Business Strategic / Custom score for the completed question &amp; answer</inlineHelpText>
        <label>Business Strategic / Custom score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Execution Question &amp; Answer</label>
    <nameField>
        <displayFormat>FEQA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Execution Question &amp; Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>